Fix MessageChannel when constructed with a broken Transport. (bug 1316473, r=billm)